heimdall-deployment.yml
apiVersion: apps/v1 
kind: Deployment
metadata: 
  name: heimdall-deployment
  namespace: heimdall
  labels: 
    app: heimdall
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      app: heimdall
  template: 
    metadata:
      name: heimdall
      labels:
        app: heimdall
    spec:
      containers:
      - name: heimdall
        image: lscr.io/linuxserver/heimdall
        volumeMounts: 
        - name: heimdall
          mountPath: /config 
      volumes: 
      - name: heimdall
        persistentVolumeClaim:
          claimName: heimdall
