heimdall-srvc.yml
apiVersion: v1
kind: Service
metadata: 
  name: heimdall-web-service
  namespace: heimdall
  labels: 
    app: heimdall
spec: 
  selector: 
    app: heimdall
  ports: 
  - name: web-service
    port: 80
    targetPort: 80
